--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="http://gmpg.org/xfn/11">
 <link rel="pingback" href="https://atsmanufacturing.github.io/oldat/xmlrpc.php">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RL5VTZHXD0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-RL5VTZHXD0');
+</script>
 <style id="kirki-css-vars">:root{}</style>
 <title>AT Surgical | Medical Supply Store | Free Shipping in the USA</title>
 <meta name="robots" content="max-image-preview:large">
